# daily-synapse

./: .env.example  .gitignore  CONTEXT.md  README-tech.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/email/: sender.py
app/email/templates/: digest.html
app/graph/: pipeline.py  state.py
app/graph/nodes/: critic.py  curator.py  email_producer.py  podcast_producer.py  resumer.py  scraper.py  summarizer.py
app/llm/: base.py  ollama_client.py  script_writer.py
app/podcast/: producer.py  tts_client.py
app/scrapers/: anthropic.py
app/services/: process_summaries.py
docs/: TECHNICAL.md
docs/adr/: 0001-llm-provider-m3.md  0002-schema-migration-strategy.md
tests/: test_critic.py  test_retry_recovery.py
