[project]
name = "daily-synapse"
version = "0.1.0"
description = "Daily Synapse — Multi-agent AI news aggregation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "ollama>=0.4.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.30",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
